# gofile-dl

./: CMakeLists.txt  Makefile  compile_commands.json  gofile.c  gofile.h  main.c
.cache/clangd/index/: gofile.h.B406AF7AE3ABBEC1.idx  main.c.B94E5A0020E347DB.idx
src/: gofile.h  main.c  test.c
